Pb avec accès journal + connexion enfant

--- a/templates/child-dashboard/pages/home.html.twig
+++ b/templates/child-dashboard/pages/home.html.twig
@@ -6,7 +6,7 @@
 
     <div class="ui card">
         <div class="image">
-            <img src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png">
+            <img src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png" alt="Child image">
         </div>
         <div class="content">
             <a class="header">{{ child.pseudo }}</a>
