--- a/templates/child-dashboard/includes/left-menu.html.twig
+++ b/templates/child-dashboard/includes/left-menu.html.twig
@@ -3,14 +3,14 @@
 
 <div class="left-menu">
 
-    <a class="menu-item" href="">
+    <a class="menu-item" href="{{ path('quest-book-profile') }}">
         <img src="{{ asset('img/el_03.PNG', 'quest-book') }}" alt="">
         <i class="ra ra-muscle-up{% if currentPath is same as (path('quest-book-profile')) %} active{% endif %}"></i>
     </a>
 
-    <a class="menu-item" href="">
+    <a class="menu-item" href="{{ path('quest-book-quests') }}">
         <img src="{{ asset('img/el_03.PNG', 'quest-book') }}" alt="">
-        <i class="ra ra-book"></i>
+        <i class="ra ra-book{% if currentPath is same as (path('quest-book-quests')) %} active{% endif %}"></i>
     </a>
 
     <a class="menu-item" href="">
