--- a/templates/child-dashboard/includes/quest-details.html.twig
+++ b/templates/child-dashboard/includes/quest-details.html.twig
@@ -3,7 +3,7 @@
     <p>{{ q.description }}</p>
     <p><i class="ra ra-emerald"></i> Affichage des récompenses</p>
     
-    <div class="checkmark" title="Rendre la quête">
+    <div class="checkmark" title="Rendre la quête" onclick="returnQuest({{ q.id }})">
         <img src="{{ asset('img/check-mark.png', 'quest-book') }}" alt="Image Validation quête">
     </div>
 </div>
@@ -33,3 +33,35 @@
         transition: all .2s;
     }
 </style>
+
+<script>
+    function returnQuest(questId) {
+        // var xhttp = new XMLHttpRequest();
+        // xhttp.onreadystatechange = function() {
+        //     if (this.readyState === 4 && this.status === 200) {
+        //         console.log('oui');
+        //     }
+        // };
+        // xhttp.open('GET', '/api/c/return/'+questId, true);
+        // xhttp.send();
+
+        if (confirm("Rendre cette quête ?")) {
+
+            window.fetch('/api/c/return/'+questId)
+                .then(r => r.json())
+                .then(r => {
+                    if (r.code === 400) {
+                        alert(r.message);
+                    } else if (r.code === 200){
+                        alert(r.message);
+
+                        const questCard = document.getElementById('quest-card-'+questId);
+                        const questDetails = document.getElementById('quest-details-'+questId);
+
+                        questCard.remove();
+                        questDetails.remove();
+                    }
+                });
+        }
+    }
+</script>
