--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -52,6 +52,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
             font-size: 32px !important;
             font-weight: bold;
         }
+
+        .main-sidebar {
+            padding-top: 0;
+        }
     </style>
 
     {% block stylesheets %}
@@ -95,12 +99,12 @@ desired effect
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="{{ path('dashboard') }}" class="logo">
+{#        <a href="{{ path('dashboard') }}" class="logo">#}
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <!-- <span class="logo-mini"><b>A</b>LT</span> -->
             <!-- logo for regular state and mobile devices -->
             <!-- <span class="logo-lg"><b>Admin</b>LTE</span> -->
-        </a>
+{#        </a>#}
 
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -170,7 +174,7 @@ desired effect
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel">
                 <div class="pull-left image">
-                    <img src="{{ asset('dist/img/user2-160x160.jpg', 'parent_dashboard') }}" class="img-circle" alt="User Image">
+                    <img src="{{ asset('dist/img/user-icon.png', 'parent_dashboard') }}" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
                     <p>{{ app.user.name }}</p>
