Footer et page C'est quoi ?

--- a/templates/home/pages/presentation.html.twig
+++ b/templates/home/pages/presentation.html.twig
@@ -9,23 +9,23 @@
 
         <div class="ui text container">
             <h1 class="ui inverted header">Quest Titre</h1>
-{#            <h2>Do whatever you want when you want to.</h2>#}
+            <h2>C'est quoi ?</h2>
 {#            <div class="ui huge primary button">#}
 {#            <div class="ui massive primary icon circular button">#}
 {#                 <i class="right book icon"></i>#}
 
 {#            </div>#}
             
-            <a href="{{ path('quest-book') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">
-                <img src="{{ asset('book_icon.PNG', 'home_img') }}" alt="Image livre">
-            </a>
+{#            <a href="{{ path('quest-book') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">#}
+{#                <img src="{{ asset('book_icon.PNG', 'home_img') }}" alt="Image livre">#}
+{#            </a>#}
         </div>
     </div>
     <div class="ui vertical stripe segment">
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column">
-                    <h3 class="ui header">Assignez des quêtes à vos enfants ...</h3>
+                    <h3 class="ui header">Le principe</h3>
                     <p>
                         Créez des quêtes personnalisées et donnez-les à vos enfants
                     </p>
@@ -62,29 +62,29 @@
             </div>
         </div>
     </div>
-{#    <div class="ui vertical stripe segment">#}
-{#        <div class="ui text container">#}
-{#            <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>#}
-{#            <p>#}
-{#                Instead of focusing on content creation and hard work, we have#}
-{#                learned how to master the art of doing nothing by providing massive#}
-{#                amounts of whitespace and generic content that can seem massive,#}
-{#                monolithic and worth your attention.#}
-{#            </p>#}
-{#            <a class="ui large button">Read More</a>#}
-{#            <h4 class="ui horizontal header divider">#}
-{#                <a href="#root"> Case Studies</a>#}
-{#            </h4>#}
-{#            <h3 class="ui header">Did We Tell You About Our Bananas?</h3>#}
-{#            <p>#}
-{#                Yes I know you probably disregarded the earlier boasts as#}
-{#                non-sequitur filler content, but its really true. It took years of#}
-{#                gene splicing and combinatory DNA research, but our bananas can#}
-{#                really dance.#}
-{#            </p>#}
-{#            <a class="ui large button">I'm Still Quite Interested</a>#}
-{#        </div>#}
-{#    </div>#}
+    <div class="ui vertical stripe segment">
+        <div class="ui text container">
+            <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
+            <p>
+                Instead of focusing on content creation and hard work, we have
+                learned how to master the art of doing nothing by providing massive
+                amounts of whitespace and generic content that can seem massive,
+                monolithic and worth your attention.
+            </p>
+            <a class="ui large button">Read More</a>
+            <h4 class="ui horizontal header divider">
+                <a href="#root"> Case Studies</a>
+            </h4>
+            <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
+            <p>
+                Yes I know you probably disregarded the earlier boasts as
+                non-sequitur filler content, but its really true. It took years of
+                gene splicing and combinatory DNA research, but our bananas can
+                really dance.
+            </p>
+            <a class="ui large button">I'm Still Quite Interested</a>
+        </div>
+    </div>
 </div>
 
 {% endblock body %}
