--- a/templates/home/includes/home-footer.html.twig
+++ b/templates/home/includes/home-footer.html.twig
@@ -4,30 +4,30 @@
                 class="ui stackable inverted divided equal height stackable grid"
         >
             <div class="three wide column">
-                <h4 class="ui inverted header">About</h4>
+                <h4 class="ui inverted header">À propos</h4>
                 <div class="ui inverted link list">
+                    <a class="item" href="#root">Mentions légales</a>
                     <a class="item" href="#root">Sitemap</a>
-                    <a class="item" href="#root">Contact Us</a>
-                    <a class="item" href="#root">Religious Ceremonies</a>
-                    <a class="item" href="#root">Gazebo Plans</a>
+{#                    <a class="item" href="#root">Religious Ceremonies</a>#}
+{#                    <a class="item" href="#root">Gazebo Plans</a>#}
                 </div>
             </div>
             <div class="three wide column">
                 <h4 class="ui inverted header">Services</h4>
                 <div class="ui inverted link list">
-                    <a class="item" href="#root">Banana Pre-Order</a>
-                    <a class="item" href="#root">DNA FAQ</a>
-                    <a class="item" href="#root">How To Access</a>
-                    <a class="item" href="#root">Favorite X-Men</a>
+                    <a class="item" href="{{ path('register') }}">Inscription</a>
+                    <a class="item" href="{{ path('login') }}">Connexion Parent</a>
+                    <a class="item" href="#root">Connexion Enfant</a>
+{#                    <a class="item" href="#root">Favorite X-Men</a>#}
                 </div>
             </div>
-            <div class="seven wide column">
-                <h4 class="ui inverted header">Footer Header</h4>
-                <p>
-                    Extra space for a call to action inside the footer that could
-                    help re-engage users.
-                </p>
-            </div>
+{#            <div class="seven wide column">#}
+{#                <h4 class="ui inverted header">Footer Header</h4>#}
+{#                <p>#}
+{#                    Extra space for a call to action inside the footer that could#}
+{#                    help re-engage users.#}
+{#                </p>#}
+{#            </div>#}
         </div>
     </div>
 </div>
