--- a/templates/home/includes/main-menu.html.twig
+++ b/templates/home/includes/main-menu.html.twig
@@ -4,7 +4,7 @@
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
         <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil</a>
-        <a class="item">C'est quoi ?</a>
+        <a class="{% if currentPath is same as(path('presentation')) %}active {% endif %}item" href="{{ path('presentation') }}">C'est quoi ?</a>
         <a class="item">Plans</a>
         <div class="right menu">
             <div class="item"><a class="ui button" href="{{ path('login') }}">Connexion</a></div>
@@ -16,7 +16,7 @@
 <!--Sidebar Menu-->
 <div class="ui vertical inverted sidebar menu">
     <a class="{% if currentPath is same as(path('home')) %}active {% endif %}item" href="{{ path('home') }}">Accueil</a>
-    <a class="item">C'est quoi ?</a>
+    <a class="{% if currentPath is same as(path('presentation')) %}active {% endif %}item" href="{{ path('presentation') }}">C'est quoi ?</a>
     <a class="item">Plans</a>
 
     <a class="item" href="{{ path('login') }}">Connexion</a>
