--- a/templates/child-dashboard/includes/left-menu.html.twig
+++ b/templates/child-dashboard/includes/left-menu.html.twig
@@ -13,9 +13,9 @@
         <i class="ra ra-book{% if currentPath is same as (path('quest-book-quests')) %} active{% endif %}"></i>
     </a>
 
-    <a class="menu-item" href="">
+    <a class="menu-item" href="{{ path('quest-book-shop') }}">
         <img src="{{ asset('img/el_03.PNG', 'quest-book') }}" alt="">
-        <i class="ra ra-book"></i>
+        <i class="ra ra-diamond"></i>
     </a>
 
 </div>
