Creating Gold Coins, Level Crystals on ChildUser, Quest, rewards | Images

--- a/public/assets/quest-book/css/profile.css
+++ b/public/assets/quest-book/css/profile.css
@@ -57,6 +57,10 @@ div.profile-page-details {
 
 }
 
+div.profile-page-details div.child-ressources{
+    padding-left: 40px;
+}
+
 div.profile-page-details ul {
     font-family: "Fantasy1", Lato, "Helvetica Neue", sans-serif !important;
     list-style: none;
