--- a/templates/child-dashboard/includes/left-menu.html.twig
+++ b/templates/child-dashboard/includes/left-menu.html.twig
@@ -15,7 +15,7 @@
 
     <a class="menu-item" href="{{ path('quest-book-shop') }}">
         <img src="{{ asset('img/el_03.PNG', 'quest-book') }}" alt="">
-        <i class="ra ra-diamond"></i>
+        <i class="ra ra-diamond{% if currentPath is same as (path('quest-book-shop')) %} active{% endif %}"></i>
     </a>
 
 </div>
