--- a/templates/parent-dashboard/pages/quests.html.twig
+++ b/templates/parent-dashboard/pages/quests.html.twig
@@ -119,6 +119,13 @@
                                         <div class="form-group">
                                             {{ form_row(questForm.child) }}
                                         </div>
+                                        <h3>Récompenses</h3>
+                                        <div class="form-group">
+                                            {{ form_row(questForm.exp) }}
+                                        </div>
+                                        <div class="form-group">
+                                            {{ form_row(questForm.goldCoins) }}
+                                        </div>
 {#                                        <div class="form-group">#}
 {#                                            {{ form_row(questForm.exp) }}#}
 {#                                        </div>#}
