--- a/templates/child-dashboard/pages/quests.html.twig
+++ b/templates/child-dashboard/pages/quests.html.twig
@@ -5,9 +5,11 @@
 {% block left_page %}
 
     <div class="quests-page">
-        {% for q in child.quests if q.status == 1 %}
-            {% include 'child-dashboard/includes/quest-card.html.twig' with {'quest': q} %}
-        {% endfor %}
+        <div class="ui accordion">
+            {% for q in child.quests if q.status == 1 %}
+                {% include 'child-dashboard/includes/quest-card.html.twig' with {'quest': q} %}
+            {% endfor %}
+        </div>
     </div>
 
 {% endblock %}
@@ -16,7 +18,7 @@
 
     <div class="quests-page-details">
         {% for q in child.quests if q.status == 1 %}
-            {% include 'child-dashboard/includes/quest-details.html.twig' with {'quest': q} %}
+{#            {% include 'child-dashboard/includes/quest-details.html.twig' with {'quest': q} %}#}
 
 
         {% endfor %}
@@ -26,5 +28,12 @@
 
 {% block stylesheets %}
     {{ parent() }}
+
     <link rel="stylesheet" href="{{ asset('css/quests.css', 'quest-book') }}" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/accordion.min.css" type="text/css" />
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/accordion.min.js"></script>
 {% endblock %}
